# mdlib

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO.md  mdlib.natvis  mold.c  mold.h  mold_draw.c  mold_draw.h  mold_filter.c  mold_filter.h  mold_gl.c  mold_molecule.h  mold_util.c  mold_util.h  unittest.c  vcpkg.json
.github/workflows/: cmake.yml  macos.yml  ubuntu-latest.yml  ubuntu20.yml  ubuntu22.yml  ubuntu24.yml  windows.yml
benchmark/: CMakeLists.txt  bench_allocator.c  bench_gro.c  bench_gto.c  bench_gto_BACKUP_2178.c  bench_gto_BASE_2178.c  bench_lammps.c  bench_pdb.c  bench_spatial_hash.c  bench_str.c  bench_util.c  bench_xtc.c  bench_xyz.c  benchmark.c  test_allocator.c  test_gro.c  test_pdb.c  test_spatial_hash.c  test_str.c  test_xyz.c  ubench.h
cmake/: BinToASM.cmake  BinToC.cmake  CheckVCPKG.cmake  Common.cmake  CompileShaders.cmake  CompileSlangShaders.cmake  EmbedBinaryFiles.cmake  FindAVX.cmake  ResolveSlang.cmake  ResolveVulkan.cmake  Shaders.cmake  SlangReflectionToHeader.cmake  common.cmake
core/: arena_alloc.h  bitop.c  bitop.h  hashtable.h  lru_cache.h
ext/: CMakeLists.txt  gl3w.c
ext/dcd/: readdcd.h
ext/fastlz/: fastlz.c  fastlz.h
ext/gl3w/: glcorearb.h
ext/gl3w/GL/: glcorearb.h
ext/hy36/: hybrid_36_c.c  hybrid_36_c.h
ext/libdivide/: libdivide.h
ext/svd3/: svd3.c  svd3.h
ext/veloxchem/basis/: 6-31++G  6-31++G_D,P_  6-31++G_D_  6-31+G  6-31+G_D,P_  6-31+G_D_  6-311++G  6-311++G_2D,2P_  6-311++G_3DF,3PD_  6-311++G_D,P_  6-311++G_D_  6-311+G  6-311+G_2D,P_  6-311+G_D,P_  6-311+G_D_  6-311G  6-311G_2DF,2PD_  6-311G_D,P_  6-311G_D_  6-31G  6-31G_2DF,P_  6-31G_3DF,3PD_  6-31G_D,P_  6-31G_D_  ANO-L-MB  ANO-L-VDZP  ANO-L-VQZP  ANO-L-VTZP  ANO-S-MB  ANO-S-VDZP  AO-START-GUESS  AUG-CC-PCV5Z  AUG-CC-PCVDZ  AUG-CC-PCVQZ  AUG-CC-PCVTZ  AUG-CC-PV5Z  AUG-CC-PV6Z  AUG-CC-PVDZ  AUG-CC-PVQZ  AUG-CC-PVTZ  (+60 more)
ext/veloxchem/basis/guess/: DEF2-SVP-DENSITY
ext/xtc/: README  xdrfile.c  xdrfile.h
mold/: CMakeLists.txt  mold_draw.c  mold_draw.h  mold_filter.c  mold_filter.h  mold_parse.h  mold_util.c  mold_util.h
mold/core/: bitop.c  bitop.h  hashtable.c  lru_cache.c
mold/shaders/: cartoon.frag  cartoon.geom  cartoon.vert  compute_spline.vert  cull_aabb.vert  downsample_depth.frag  extract_control_points.vert  licorice.geom  (+5 more)
shaders/: compute_aabb.vert  compute_spline.geom  fs_quad.vert  licorice.frag  ribbons.frag  ribbons.geom  ribbons.vert  space_fill.geom  space_fill.vert
src/: CMakeLists.txt  md_allocator.c  md_allocator.h  md_atomic_infer.c  md_context.h  md_csv.c  md_csv.h  md_cube.c  md_cube.h  md_dcd.c  md_dcd.h  md_draw.c  md_draw.h  md_edr.c  md_edr.h  md_filter.c  md_filter.h  md_frame_cache.c  md_frame_cache.h  md_gfx.c  md_gfx.h  md_gl.c  md_gl.h  md_gl_BACKUP_19555.c  md_gl_LOCAL_19555.c  md_gl_REMOTE_19555.c  md_gro.c  md_gro.h  md_gto.c  md_gto.h  md_lammps.c  md_lammps.h  md_log.c  md_mmcif.c  md_mmcif.h  md_mmcif_BACKUP_3184.c  md_mmcif_REMOTE_3184.c  md_molecule.c  md_molecule.h  md_pdb.c  (+44 more)
src/core/: arena_alloc.h  arena_allocator.c  array.inl  bitop.c  bitop.h  common.h  compiler.h  file.c  file.h  file.inl  intrinsics.h  lru_cache.c  lru_cache.h  md_allocator.c  md_allocator.h  md_arena_allocator.c  md_arena_allocator.h  md_array.h  md_array.inl  md_atomic.h  md_base64.c  md_base64.h  md_bitfield.c  md_bitfield.h  md_bitop.c  md_bitop.h  md_bitop.inl  md_common.c  md_common.h  md_compiler.h  md_file.c  md_file.h  md_gl_util.c  md_gl_util.h  md_gpu.h  md_gpu_metal.m  md_gpu_metal.mm  md_gpu_util.h  md_gpu_vulkan.c  md_grid.c  (+54 more)
src/core/experimental/: lru_cache.c  md_string_builder.h
src/ext/: CMakeLists.txt
src/ext/dcd/: fastio.h
src/ext/gl3w/: glcorearb.h
src/ext/svd3/: README.md  svd3.c
src/ext/xtc/: xdrfile.c  xdrfile.h  xdrfile_trr.c  xdrfile_trr.h  xdrfile_xtc.c  xdrfile_xtc.h
src/shaders/: cartoon.frag  cartoon.geom  cartoon.vert  compute_aabb.vert  compute_pbc_view_velocity.vert  compute_spline.geom  compute_spline.vert  compute_spline_extract.vert  compute_spline_smooth.vert  compute_spline_subdivide.vert  compute_velocity.vert  cull_aabb.frag  cylinder.frag  cylinder.vert  draw_aabb.frag  draw_aabb.geom  draw_aabb.vert  eval_alie.comp  eval_density_gto.comp  eval_gto.comp  eval_gto.cs  eval_gto_density.comp  eval_gto_density_grad.comp  extract_control_points.vert  licorice.frag  licorice.geom  licorice.vert  ribbons.frag  ribbons.geom  ribbons.vert  segment_and_attribute_to_group.comp  space_fill.frag  space_fill.geom  space_fill.vert  spacefill.frag  spacefill.geom  spacefill.vert  voronoi_segment.comp
src/shaders/gfx/: cluster_compute_data.comp  cluster_cull_late.comp  cluster_rasterize.comp  cluster_write_elem_idx.comp  common.h  compose.frag  cull.comp  culling.glsl  depth_reduce.comp  fs_quad.vert  instance_cluster_cull.comp  instance_cull.comp  instance_cull_late.comp  space_fill.frag  space_fill.vert  spacefill.frag  spacefill.geom  spacefill.vert  sphere_raster.comp  vis_reduce.comp  write_picking_data.comp
src/shaders/gto/: eval_gto_density.slang  eval_gto_mo.slang  eval_gto_mo_root.slang
src/shaders/topo/: bidirectional_manifold.comp  bidirectional_manifold.slang  critical_point_compaction.comp  critical_point_compaction.slang  critical_points.comp  critical_points.slang  path_compression.comp  path_compression.slang  topo_setup.slang  vertex_edge_extraction.comp  vertex_edge_extraction.slang
unittest/: CMakeLists.txt  add_tests.cmake  avx_mathfun.h  index.html  test_allocator.c  test_api_equivalence.c  test_array.c  test_atomic.c  test_base64.c  test_bitfield.c  test_bitop.c  test_cube.c  test_edr.c  test_element_guess_compat.c  test_filter.c  test_frame_cache.c  test_gpu.c  test_gpu_pass.c  test_gro.c  test_gto.c  test_hash.c  test_infer_atomic_number.c  test_intrinsics.c  test_lammps.c  test_mmcif.c  test_os.c  test_pdb.c  test_script.c  test_simd.c  test_spatial_hash.c  test_str.c  test_string_builder.c  test_sync.c  test_trr.c  test_unit.c  test_util.c  test_vec_math.c  test_vector_graphics.c  test_vlx.c  test_xtc.c  (+4 more)
unittest/data/: atom_res_chain.txt  script.txt
